# nannou-starter

./: .gitignore  CITATION.cff  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/shaders/: basic.frag  basic.vert
docs/: project_structure.md
examples/: animated_shapes.rs  custom_shader.rs  simple_shape.rs  texture_example.rs
src/: main.rs  model.rs
src/utils/: color.rs  geometry.rs  shader.rs
tests/: integration_test.rs
